--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>FM Pazzurdo</title>
+        <title>FMP2</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js" integrity="sha512-jduERlz7En1IUZR54bqzpNI64AbffZWR//KJgF71SJ8D8/liKFZ+s1RxmUmB+bhCnIfzebdZsULwOrbVB5f3nQ==" crossorigin="anonymous" referrerpolicy="no-referrer">import * as Tone from "tone";</script>
         <script src="Model/Defaults.js" defer></script>
         <script src="Model/Classes.js" defer></script>
@@ -79,7 +79,7 @@
                         <div class="knobContainer">
                             <div id="folderAmountContainer" class="container">
                                 <div class="knob"><div class="dot"></div></div>
-                                <div id="fold_param.fold_amt" onclick="focusInput()" class="label">Fold amount: <input class="inputEl" onfocus="this.select()" type="number" value="1" step="1" min="1" max="100"></div>
+                                <div id="fold_param.fold_amt" onclick="focusInput()" class="label">Fold amount: <input class="inputEl" onfocus="this.select()" type="number" value="1" step="0.1" min="1" max="60"></div>
                             </div>
                             <div id="distortionAmountContainer" class="container">
                                 <div class="knob"><div class="dot"></div></div>
@@ -259,7 +259,7 @@
                             <div id="globals.bpm" onclick="focusInput()" class="label">BPM: <input class="inputEl" onfocus="this.select()" type="number" step="1" value="120" min="30" max="300"></div>
                         </div>
                     </div>
-                    <div class="copertinaContainer"><img src="View/Images/Copertina ACTAM nero.png" class="copertina"></div>
+                    <div class="copertinaContainer"><span style="font-size: 15px;">FMP2 made by:<br>Galadini Giuliano<br>Macrì Carlo<br>Messina Francisco</span></div>
                 </div>
                 <div id="containerSequencer">
                     <div class="separationSteps ch1" id="ch1"><div class="littleSteps"></div></div>
@@ -270,7 +270,7 @@
                 </div>
             </div>
         </div>
-        <footer style="display: flex; justify-content: center;"><a href="https://github.com/FranciscoMessina00/ProgettoACTAM2023" target="_blank">Click here to check the repository and the README.md!</a></footer>
+        <footer style="display: flex; justify-content: center;"><a href="https://github.com/FranciscoMessina00/ProgettoACTAM2023" target="_blank">Click here to check the repository and the documentation!</a></footer>
     </body>
     
 </html>    
